--- a/style.css
+++ b/style.css
@@ -144,6 +144,7 @@ main{
     display: flex;
     flex-direction: column;
     align-items: center;
+    background: hsl(12deg 71% 99%);
 }
 
 .mainTitle{
